    - Implement issue 20: Embedded fonts support.
    - Implement issue 1926: Upgrade to Qt5.
    - Implement issue 1924: Add dockable Clips window to select clips.
    - Implement issue 1925: Don't force well formed checks unless absolutely necessary.
    - Implement issue 1843: Preview should be real-time display of Code View.
    - Fix issue 1961: Generate TOC should not create IDs for headings when it only points to filenames.
    - Fix issue 1857: CSS Highlighting inline styles inconsistent.
    - Fix issue 1946: Highlight misspelled words checkbox should be available in Preferences.
    - Fix issue 1943: Reports can crash if file has non well-formed xml.
    - Fix issue 1883: TOC window does not jump to right location for some entries.
    - Fix issue 1906: "Delete unused image files" deleting background images.
    - Fix issue 1874: Using Delete Unused Stylesheet Classes deletes pseudo-elements.
    - Fix issue 1939: CSS parser does not match wildcard selectors consistently.
    - Fix issue 1935: Improve speed of Index Editor autofill by removing progress dialog.
    - Fix issue 1891: Opening the Saved Searches expands all groups.
    - Fix issue 1934: Go To Style does not work with CSS filenames that have spaces in them.
    - Fix issue 1933: No message is displayed if Go To Style can't find a style.
    - Fix issue 1932: Replace All needs to be run twice in some cases.
    - Fix issue 1930: Fix Metadata language dropdown selection incorrect matching.
    - Fix issue 1775: Sigil-0.6.0 edit very slow with Thai e-Pub.
    - Fix issue 1764: Sigil crashes on KDE after rearranging text sections.
    - Fix issue 1720: Book View highlights text apparently randomly.
    - Fix issue 1923: CSS validation should use EPUB 2 profile.
    - Fix issue 1922: Invalid EPUB warning dialog is not long enough.
    - Fix issue 1918: Support import of tab separated entries for Index Editor.